[package]
name = "mc_ecs_server_lib"
version = "0.1.0"
authors = ["Heavenstone <malolegendrelemaire@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mc_networking = { path = "../mc_networking" }
mc_utils = { path = "../mc_utils" }
tokio = { version = "1.0", features = ["full"] }
bevy_ecs = "0.8"
rayon = "1.5"
readonly = "0.2"
uuid = { version = "0.8", features = ["v4", "v3"] }
ahash = "0.6"
serde_json = "1.0"
smallvec = "1.6"
dashmap = "4.0"
crossbeam = "0.8"
static_assertions = "1.1.0"
