[package]
name = "mc_networking"
version = "0.1.0"
authors = ["Heavenstone <malolegendrelemaire@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
byteorder = "1.3.4"
anyhow = "1.0.32"
serde = "1.0"
serde_json = "1.0"
log = "0.4"
fern = { version = "0.5", features = ["colored"] }
async-trait = "0.1.41"
uuid = "0.8.1"
hematite-nbt = "0.5.0"
bytes = "0.5"
flate2 = "1.0"
