[package]
name = "mc_networking"
version = "0.1.0"
authors = ["Heavenstone <malolegendrelemaire@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3", features = ["full"] }
byteorder = "1.3.4"
serde = "1.0"
serde_json = "1.0"
log = "0.4"
uuid = "0.8.1"
hematite-nbt = "0.5.0"
bytes = "0.6"
flate2 = { version = "1.0.17", features = ["zlib"], default-features = false }
thiserror = "1.0"
openssl = { version = "0.10", features = ["vendored"] }
lazy_static = "1.4.0"
