[package]
name = "mc_protocol"
version = "0.1.0"
authors = ["Heavenstone <malolegendrelemaire@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
byteorder = "1.3.4"
anyhow = "1.0.32"
serde = "1.0"
serde_json = "1.0"
