[package]
name = "mc_server_lib"
version = "0.1.0"
authors = ["Heavenstone <malolegendrelemaire@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mc_networking = { path = "../mc_networking" }
mc_utils = { path = "../mc_utils" }
tokio = { version = "0.3", features = ["full"] }
byteorder = "1.3.4"
anyhow = "1.0.32"
serde = "1.0"
serde_json = "1.0"
log = "0.4"
async-trait = "0.1.41"
uuid = { version = "0.8", features = ["v4", "v3"] }
hematite-nbt = "0.5.0"
downcast-rs = "1.2.0"
reqwest = { version = "0.10.8", features = ["default-tls"], default-features = false }
