[package]
name = "mc_utils"
version = "0.1.0"
authors = ["Heavenstone <malolegendrelemaire@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mc_networking = {path = "../mc_networking"}
hematite-nbt = "0.5.0"
serde = "1.0"
serde-big-array = "0.3"
